# fmu-gen-hex

./: README.md  docker-compose.yml  pyproject.toml  test.ipynb
.devcontainer/: devcontainer.json
.github/workflows/: notion-sync-action.yml
demo/: demo.py
demo/output/: hex_delta55_exported.fmu
docker/: app.Dockerfile  dev.Dockerfile
examples/: test.ipynb
fmu_gen_hex/: callbacks.py  data_extraction.py  fmu_compile.py  hex.py  sim.py  xml_functs.py
fmu_gen_hex.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
fmu_gen_hex/hex_delta55/: CMakeLists.txt  build.sh
fmu_gen_hex/hex_delta55/src/: hex_delta55.cpp  hex_delta55.h  hex_delta55_0.cpp
fmu_gen_hex/hex_delta55/src/fmi2common/: InstanceData.cpp
fmu_gen_hex/hex_delta55/zip_contents/: modelDescription.xml
fmu_gen_hex/resources/: he-spec_schema.json
